--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "dotenv": "^16.4.7",
     "framer-motion": "^11.15.0",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
