--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "property-search",
+  "homepage": "https://alwayspasindu.github.io/react-property-finder/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -7,13 +8,16 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy" : "npm run build",
+    "deploy" : "gh-pages -d dist"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "dotenv": "^16.4.7",
     "framer-motion": "^11.15.0",
+    "gh-pages": "^6.3.0",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.3.1",
